# ct2-embedding-cli

./: .gitignore  Cargo.toml  README.md  build.rs
include/ctranslate2/: allocator.h  batch_reader.h  bfloat16.h  buffered_translation_wrapper.h  decoding.h  decoding_utils.h  devices.h  encoder.h  encoding.h  filesystem.h  generation.h  generator.h  logging.h  padder.h  primitives.h  profiler.h  random.h  replica_pool.h  sampling.h  scoring.h  storage_view.h  thread_pool.h  translation.h  translator.h  types.h  utils.h  vocabulary.h  vocabulary_map.h
include/ctranslate2/layers/: attention.h  attention_layer.h  common.h  decoder.h  encoder.h  flash_attention.h  layers.h  transformer.h  wav2vec2.h  wav2vec2bert.h  whisper.h
include/ctranslate2/models/: language_model.h  model.h  model_factory.h  model_reader.h  sequence_to_sequence.h  transformer.h  wav2vec2.h  wav2vec2bert.h  whisper.h
include/ctranslate2/ops/: activation.h  add.h  alibi_add.h  bias_add.h  concat.h  conv1d.h  cos.h  dequantize.h  flash_attention.h  gather.h  gelu.h  gemm.h  gumbel_max.h  identity.h  layer_norm.h  log.h  matmul.h  mean.h  median_filter.h  min_max.h  mul.h  multinomial.h  nccl_ops.h  op.h  ops.h  quantize.h  relu.h  rms_norm.h  rotary.h  sigmoid.h  sin.h  slide.h  softmax.h  split.h  squeeze.h  sub.h  sum.h  swish.h  tanh.h  tile.h  (+4 more)
include/ctranslate2/ops/awq/: dequantize_awq.h  gemm.h  gemv.h
include/ctranslate2/ops/flash-attention/: flash.h  mask.h  (+7 more)
msvc/: cpu_features.lib  utils.lib
msvc/vc18/: cpu_features.lib
src/: main.rs
src/cpp/: embedding_bridge.cc  embedding_bridge.h
