[package]
name = "ct2-embedding-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cxx = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokenizers = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
