[package]
name = "ct2-embedding-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cxx = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokenizers = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# New dependencies for Server Mode
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
atty = "0.2"
rayon = "1.8"
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["limit"] }

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
